--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/pgmgent-1920-students/case1-pgm-website-CedricDeBlanck.git/issues"
   },
-  "homepage": "https://github.com/pgmgent-1920-students/case1-pgm-website-CedricDeBlanck.git",
+  "homepage": "https://github.com/pgmgent-1920-students/case1-pgm-website-CedricDeBlanck.git/index.html",
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
     "body-parser": "^1.19.0",
